# prometheus-fritzbox-exporter

./: Cargo.toml  README.md  fritzbox_exporter.py  requirements.txt
src/: lib.rs  main.rs
